# CA2_D00255161_BugsLife

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  board.cpp  board.h  bug.cpp  bug.h  bugs.cpp  crawler.cpp  crawler.h  direction.h  hopper.cpp  hopper.h  jewelBug.cpp  jewelBug.h  main.cpp
